# esp-mqtt-air

./: .gitignore  .gitmodules  CMakeLists.txt
components/bme280/: CMakeLists.txt
components/bme680/: CMakeLists.txt
components/bsec/: CMakeLists.txt  bsec_integration.c
components/esp_air/: CMakeLists.txt  esp_air.c  esp_air.h
components/esp_state/: CMakeLists.txt  esp_state.c  esp_state.h
components/user_i2c/: CMakeLists.txt  user_i2c.c  user_i2c.h
main/: Kconfig  Kconfig.projbuild  backup.c  main.c
security/: ca.crt
